# tars

./: .gitignore  LICENSE  README.md  app.py  confluence.py  pyproject.toml  query_doc.py  requirements.txt
model/: my_retriever.py
src/: confluence.py  confluence_loader.py  database.py  tool.py
