[tool.poetry]
name = "tars"
version = "0.1.0"
description = "A chatbot that use OpenAI model to answer question about Confluence document"
authors = ["Sean Chang <chungsean74@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/johnccshen/tars"

packages = [
    {include = "src"},
    {include = "model"}
]

[tool.poetry.dependencies]
python = "^3.10"
atlassian-python-api = "^3.41.4"
markdownify = "0.11.6"
chromadb = "^0.4.18"
langchain = "^0.0.345"
unstructured = "^0.11.2"
markdown = "^3.5.1"
tiktoken = "^0.5.2"
pandas = "^2.1.4"
openai = "^1.5.0"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
